--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discord</title>
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <!-- header -->
+    <header>
+      <!-- header navigation bar -->
+      <div class="header-nav">
+        <div class="align-container nav-container">
+          <div class="nav-logo">logo</div>
+          <div class="nav-link">
+            <ul class="link-list">
+              <li>link</li>
+              <li>link</li>
+              <li>link</li>
+              <li>link</li>
+              <li>link</li>
+            </ul>
+          </div>
+          <div class="nav-login">login</div>
+        </div>
+      </div>
+      <!-- header main content -->
+      <div class="header-main"></div>
+    </header>
+  </body>
 </html>
