feat: aggiunto corpo principale header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </div>
       </div>
       <!-- header main content -->
-      <div class="header-main"></div>
+      <div class="header-main">
+        <div class="align-container header-main-container">
+          <div class="header-content"></div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
