feat: aggiunto corpo della pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <!-- header -->
+    <!-- Header -->
     <header>
       <!-- header navigation bar -->
       <div class="header-nav">
@@ -34,5 +34,31 @@
         </div>
       </div>
     </header>
+    <!-- Main -->
+    <main>
+      <section>
+        <div class="align-container section-small">
+          <div class="section-image"></div>
+          <div class="section-text"></div>
+        </div>
+      </section>
+      <section>
+        <div class="align-container section-small">
+          <div class="section-text"></div>
+          <div class="section-image"></div>
+        </div>
+      </section>
+      <section>
+        <div class="align-container section-small">
+          <div class="section-image"></div>
+          <div class="section-text"></div>
+        </div>
+      </section>
+      <section>
+        <div class="align-container section-big">
+          <div class="section-big-content"></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
