feat: aggiunto corpo del footer

--- a/index.html
+++ b/index.html
@@ -60,5 +60,20 @@
         </div>
       </section>
     </main>
+    <!-- Footer -->
+    <footer>
+      <!-- footer main content -->
+      <div class="footer-main">
+        <div class="align-container footer-main-container">
+          <div class="footer-main-left"></div>
+          <div class="footer-main-section"></div>
+          <div class="footer-main-section"></div>
+          <div class="footer-main-section"></div>
+          <div class="footer-main-section"></div>
+        </div>
+      </div>
+      <!-- footer logo & button -->
+      <div class="footer"></div>
+    </footer>
   </body>
 </html>
