feat: aggiunto footer

--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
         </div>
       </div>
       <!-- footer logo & button -->
-      <div class="footer"></div>
+      <div class="footer">
+        <div class="align-container footer-container">
+          <div class="footer-logo">Logo</div>
+          <div class="footer-button">Bottone</div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
