fix: header navbar

--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
       <!-- header navigation bar -->
       <div class="header-nav">
         <div class="align-container nav-container">
-          <div class="nav-logo">logo</div>
+          <div class="nav-logo">
+            <img src="./img/logo.svg" alt="logo" />
+          </div>
           <div class="nav-link">
             <ul class="link-list">
-              <li>link</li>
-              <li>link</li>
-              <li>link</li>
-              <li>link</li>
-              <li>link</li>
+              <li>Scarica</li>
+              <li>Perchè Discord</li>
+              <li>Nitro</li>
+              <li>Sicurezza</li>
+              <li>Assistenza</li>
             </ul>
           </div>
-          <div class="nav-login">login</div>
+          <div class="nav-login">
+            <span>Accedi</span>
+          </div>
         </div>
       </div>
       <!-- header main content -->
