--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           </div>
           <div class="nav-link">
             <ul class="link-list">
-              <li>Scarica</li>
-              <li>Perchè Discord</li>
-              <li>Nitro</li>
-              <li>Sicurezza</li>
-              <li>Assistenza</li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perchè Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
             </ul>
           </div>
           <div class="nav-login">
