fix: header content and background image

--- a/index.html
+++ b/index.html
@@ -27,14 +27,33 @@
             </ul>
           </div>
           <div class="nav-login">
-            <span>Accedi</span>
+            <span class="btn-white">Accedi</span>
           </div>
         </div>
       </div>
       <!-- header main content -->
       <div class="header-main">
         <div class="align-container header-main-container">
-          <div class="header-content"></div>
+          <div class="header-content">
+            <h1 class="header-title">Il tuo posto per parlare</h1>
+            <p class="header-paragraph">
+              Che tu faccia parte di un club scolastico, gruppo di gamer,
+              comunità artistica mondiale, o semplicemente di un piccolo gruppo
+              di amici che vuole passare il tempo assieme, Discord rende più
+              facile chiaccherare ogni giorno e ritrovarsi più spesso.
+            </p>
+            <div class="header-main-btn">
+              <div class="btn-white header-btn-white">
+                <a href="#">
+                  <span class="arrow-symbol">&DownArrowBar;</span>
+                  Scarica per Mac
+                </a>
+              </div>
+              <div class="btn-black header-btn-black">
+                <a href="#">Apri Discord nel tuo browser</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
