--- a/index.html
+++ b/index.html
@@ -61,14 +61,34 @@
     <main>
       <section>
         <div class="align-container section-small">
-          <div class="section-image"></div>
-          <div class="section-text"></div>
+          <div class="section-image">
+            <img src="./img/item1.svg" alt="study-group" />
+          </div>
+          <div class="section-text">
+            <h2 class="section-title">
+              Un luogo a invito con tutto lo spazio necessario per parlare
+            </h2>
+            <p class="section-content">
+              I server Discord sono organizzati in canali tematici in cui puoi
+              collaborare, condividere o semplicemente parlare della tua
+              giornata senza intasare una chat di gruppo.
+            </p>
+          </div>
         </div>
       </section>
       <section>
         <div class="align-container section-small">
-          <div class="section-text"></div>
-          <div class="section-image"></div>
+          <div class="section-text">
+            <h2 class="section-title">Dove trovarsi è facile</h2>
+            <p class="section-content">
+              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel
+              tuo server possono vedere che sei lì e unirsi istantaneamente
+              senza dover chiamare.
+            </p>
+          </div>
+          <div class="section-image">
+            <img src="./img/item2.svg" alt="call-image" />
+          </div>
         </div>
       </section>
       <section>
