fix: main section three

--- a/index.html
+++ b/index.html
@@ -93,8 +93,17 @@
       </section>
       <section>
         <div class="align-container section-small">
-          <div class="section-image"></div>
-          <div class="section-text"></div>
+          <div class="section-image">
+            <img src="./img/item3.svg" alt="fandom-image" />
+          </div>
+          <div class="section-text">
+            <h2 class="section-title">Da pochi a un fandom</h2>
+            <p class="section-content">
+              Dai inizio a una community di qualsiasi dimensione con strumenti
+              di moderazione e accesso ai membri personalizzabile. Concedi ai
+              membri poteri speciali, crea canali privati, e molto altro.
+            </p>
+          </div>
         </div>
       </section>
       <section>
