--- a/index.html
+++ b/index.html
@@ -108,7 +108,31 @@
       </section>
       <section>
         <div class="align-container section-big">
-          <div class="section-big-content"></div>
+          <div class="section-big-content">
+            <div class="section-text-big">
+              <h2 class="section-title">
+                Tecnologia affidabile per tenersi in contatto
+              </h2>
+              <p class="section-content">
+                Video e audio a bassa latenza ti faranno sentire come se foste
+                tutti nella stessa stanza. Fai ciao in video, guarda gli amici
+                giocare in streaming, o riunitevi in una sessione di disegno con
+                la condivisione schermo.
+              </p>
+            </div>
+            <div class="section-image">
+              <img src="./img/item4-big.svg" alt="chilling-image" />
+            </div>
+            <div class="big-content-download">
+              <h3>Pronto a iniziare la tua avventura?</h3>
+            </div>
+            <div class="btn-lilla">
+              <a href="#">
+                <span class="arrow-symbol">&DownArrowBar;</span>
+                Scarica per Mac
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
