--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discord</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -141,11 +145,68 @@
       <!-- footer main content -->
       <div class="footer-main">
         <div class="align-container footer-main-container">
-          <div class="footer-main-left"></div>
-          <div class="footer-main-section"></div>
-          <div class="footer-main-section"></div>
-          <div class="footer-main-section"></div>
-          <div class="footer-main-section"></div>
+          <div class="footer-main-left">
+            <h3>Il tuo posto per parlare</h3>
+            <div class="lang-selection">
+              <!-- Da sistemare allineamento freccia -->
+              <img src="./img/ita.png" alt="italian-flag" />
+              <span>Italiano &#x2304;</span>
+            </div>
+            <div class="external-link">
+              <ul class="external-link-list">
+                <li><a href="#" class="fa fa-twitter"></a></li>
+                <li><a href="#" class="fa fa-instagram"></a></li>
+                <li><a href="#" class="fa fa-facebook"></a></li>
+                <li><a href="#" class="fa fa-youtube"></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-main-section">
+            <h4>Prodotto</h4>
+            <ul>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#"></a>Perchè Discord</li>
+              <li><a href="#"></a>Nitro</li>
+              <li><a href="#"></a>Sicurezza</li>
+              <li><a href="#"></a>Assistenza</li>
+            </ul>
+          </div>
+          <div class="footer-main-section">
+            <h4>Compagnia</h4>
+            <ul>
+              <li><a href="#">Chi Siamo</a></li>
+              <li><a href="#"></a>Lavora con noi</li>
+              <li><a href="#"></a>Marchio</li>
+              <li><a href="#"></a>Redazione</li>
+              <li><a href="#"></a>Negozio</li>
+            </ul>
+          </div>
+          <div class="footer-main-section">
+            <h4>Risorse</h4>
+            <ul>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#"></a>Perchè Discord</li>
+              <li><a href="#"></a>Nitro</li>
+              <li><a href="#"></a>Sicurezza</li>
+              <li><a href="#"></a>Assistenza</li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#"></a>Perchè Discord</li>
+              <li><a href="#"></a>Nitro</li>
+              <li><a href="#"></a>Sicurezza</li>
+              <li><a href="#"></a>Assistenza</li>
+              <li><a href="#"></a>Assistenza</li>
+            </ul>
+          </div>
+          <div class="footer-main-section">
+            <h4>Norme</h4>
+            <ul>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#"></a>Perchè Discord</li>
+              <li><a href="#"></a>Nitro</li>
+              <li><a href="#"></a>Sicurezza</li>
+              <li><a href="#"></a>Assistenza</li>
+            </ul>
+          </div>
         </div>
       </div>
       <!-- footer logo & button -->
