--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
       <!-- footer logo & button -->
       <div class="footer">
         <div class="align-container footer-container">
-          <div class="footer-logo">Logo</div>
-          <div class="footer-button">Bottone</div>
+          <div class="footer-logo">
+            <img src="./img/logo.svg" alt="logo" />
+          </div>
+          <div class="footer-button btn-white">Registrati</div>
         </div>
       </div>
     </footer>
