--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
             </p>
             <div class="header-main-btn">
               <div class="btn-white header-btn-white">
-                <a href="#">
-                  <span class="arrow-symbol">&DownArrowBar;</span>
-                  Scarica per Mac
-                </a>
+                <a href="#">&#8681; Scarica per Mac</a>
               </div>
               <div class="btn-black header-btn-black">
                 <a href="#">Apri Discord nel tuo browser</a>
@@ -131,10 +128,7 @@
               <h3>Pronto a iniziare la tua avventura?</h3>
             </div>
             <div class="btn-lilla">
-              <a href="#">
-                <span class="arrow-symbol">&DownArrowBar;</span>
-                Scarica per Mac
-              </a>
+              <a href="#">&#8681; Scarica per Mac</a>
             </div>
           </div>
         </div>
